# DomesticBatteryOptimiser

./: .gitignore  README.md  main.py  pyproject.toml
config/: DataConfig.py  InternalConfig.py
data/: README.md
src/: hyperparameter_tuning.py
src/data_ingestion/: data_ingestor.py  download_weather_data.py  electricity.py  weather.py
src/features/: CorrelatedFeatureRemover.py  add_features.py  daily_averages.py  data_analyser.py  feature_configuration.py  feature_selection.py  features.py  full_resolution_data_analyser.py  plot_consumption_vs_features.py  process_features.py
src/regression/: fit_full_time.py  gaussian_process_regression.py  plot_average_versus_time_of_day.py  plot_comparison.py  plot_full_time_resolution_summary.py  plot_full_timeseries.py  regression.py  score_regression.py  tuning.py
